--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 boto3==1.20.23
 botocore==1.23.23
+greenlet==1.1.2
 jmespath==0.10.0
 numpy==1.21.4
 pandas==1.3.4
@@ -8,4 +9,6 @@ pytz==2021.3
 s3transfer==0.5.0
 six==1.16.0
 smart-open==5.2.1
+SQLAlchemy==1.4.28
+sqlalchemy-cockroachdb==1.4.3
 urllib3==1.26.7
