--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,41 @@
+alabaster==0.7.12
+Babel==2.9.1
 boto3==1.20.23
 botocore==1.23.23
+certifi==2021.10.8
+charset-normalizer==2.0.9
+colorama==0.4.4
+docutils==0.17.1
 greenlet==1.1.2
+idna==3.3
+imagesize==1.3.0
+Jinja2==3.0.3
 jmespath==0.10.0
+livereload==2.6.3
+MarkupSafe==2.0.1
 numpy==1.21.4
+packaging==21.3
 pandas==1.3.4
+psycopg2==2.9.2
+Pygments==2.10.0
+pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.26.0
+rstcheck==3.3.1
 s3transfer==0.5.0
 six==1.16.0
 smart-open==5.2.1
+snowballstemmer==2.2.0
+Sphinx==4.3.2
+sphinx-autobuild==2021.3.14
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.28
 sqlalchemy-cockroachdb==1.4.3
+tornado==6.1
 urllib3==1.26.7
