--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
-greenlet==2.0.0a1
-numpy==1.22.2
-SQLAlchemy==1.4.31
+contourpy==1.0.5
+cycler==0.11.0
+et-xmlfile==1.1.0
+fonttools==4.37.4
+joblib==1.2.0
+kiwisolver==1.4.4
+matplotlib==3.6.0
+numpy==1.23.3
+openpyxl==3.0.10
+packaging==21.3
+pandas==1.5.0
+Pillow==9.2.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.4
+scikit-learn==1.1.2
+scipy==1.9.1
+six==1.16.0
+threadpoolctl==3.1.0
