--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,43 @@
+appnope==0.1.3
+asttokens==2.4.1
+comm==0.2.0
 contourpy==1.0.5
 cycler==0.11.0
+debugpy==1.8.0
+decorator==5.1.1
 et-xmlfile==1.1.0
+executing==2.0.1
 fonttools==4.37.4
+ipykernel==6.26.0
+ipython==8.18.0
+jedi==0.19.1
 joblib==1.2.0
+jupyter_client==8.6.0
+jupyter_core==5.5.0
 kiwisolver==1.4.4
 matplotlib==3.6.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.8
 numpy==1.23.3
 openpyxl==3.0.10
 packaging==21.3
 pandas==1.5.0
+parso==0.8.3
+pexpect==4.9.0
 Pillow==9.2.0
+platformdirs==4.0.0
+prompt-toolkit==3.0.41
+psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2022.4
-scikit-learn==1.1.2
-scipy==1.9.1
+python-dotenv==1.0.0
+pytz==2023.3.post1
+pyzmq==25.1.1
 six==1.16.0
-threadpoolctl==3.1.0
+stack-data==0.6.3
+tornado==6.3.3
+traitlets==5.13.0
+wcwidth==0.2.12
